--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/vite": "^4.0.0",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
+        "postcss": "^8.4.31",
         "sass": "^1.93.2",
-        "tailwindcss": "^4.0.0",
+        "tailwindcss": "^3.1.0",
         "vite": "^7.0.7"
     },
     "dependencies": {
